Advanced Reporting APIs